removes images - added favicon

--- a/sites/apply.html
+++ b/sites/apply.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odessa RP - Apply</title>
+    <title>Odessa RP - Ansøg</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
@@ -32,6 +32,7 @@
     <main class="main-content">
         <div class="content-container">
             <h1>Allowlist Ansøgning</h1>
+            <p>For at modtage allowlist på Odessa, skal du bare joine vores discord, oprette en allowlist ticket for at aftale en tid til samtale. Så kommer du til samtale idét en har mulighed for at snakke med dig.</p>
             <div class="discord-invite">
                 <h5 class="discord-invite-text">Du er blevet inviteret til at joine en server</h5>
                 <div class="discord-invite-body">
