--- a/sites/rules.html
+++ b/sites/rules.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odessa RP - Rules</title>
+    <title>Odessa RP - Regler</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
 
     <main class="main-content">
         <div class="content-container">
-            <h1>Server Rules</h1>
+            <h1>Server Regler</h1>
             <h2>[DISCORD & COMMUNITY GUIDELINES]</h2>
             <p><strong>C1) Serverpersonale</strong> - Det er <strong>IKKE</strong> tilladt at kontakte serverpersonale i privatbeskeder uden forudgående accept! Brug #Afventer Support eller #opret-sag på Discord. (Vi kan heller ikke lide SPAM)</p>
             <p><strong>C2) Reklame</strong> - Reklame og/eller links er <strong>IKKE</strong> tilladt. (Content Creators er undtaget af denne regel)</p>
