Added footer - modified bg color

--- a/sites/apply.html
+++ b/sites/apply.html
@@ -59,6 +59,36 @@
             </div>
         </div>
     </main>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-section about-us">
+                <h4>Om os</h4>
+                <p>Odessa RP er en dedikeret fivem server der tilbyder fordybende RP oplevelser.</p>
+            </div>
+            <div class="footer-section contact">
+                <h4>Kontakt</h4>
+                <a href="https://discord.gg/odessarp">Discord: Join os</a>
+            </div>
+            <div class="footer-section">
+                <h4>Hurtige links</h4>
+                <ul>
+                    <li><a href="/rules.html">Regler</a></li>
+                    <li><a href="/apply.html">Ansøg</a></li>
+                </ul>
+            </div>
+            <div class="footer-section folg-os">
+                <h4>Følg os</h4>
+                <a href="https://www.facebook.com/odessarp"><i class="fab fa-facebook-square"></i></a>
+                <a href="https://www.instagram.com/odessarp_2.0/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.tiktok.com/@odessarp"><i class="fab fa-tiktok"></i></a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2024 OdessaRP. All rights reserved.</p>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
