implementing connect button - unfinished

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
         </div>
         <div class="info-sections">
             <div class="info-box" id="server-info">
+                <div class="server-info-content">
+                    <!-- Content to be blurred goes here -->
+                </div>
+                <a class="join-server-button" href="fivem://connect/cfx.re/join/lm8mo4">
+                    Tilslut serveren
+                </a>
             </div>
             <div class="info-box" id="social-media">
                 <h2 class="section-title">Sociale Medier</h2>
