--- a/sites/apply.html
+++ b/sites/apply.html
@@ -47,15 +47,18 @@
                         </h3>
                         <div class="discord-invite-counts">
                             <i class="discord-invite-status-icon discord-invite-online-icon"></i>
-                            <strong class="discord-invite-count">X,XXX Online</strong>
+                            <strong class="discord-invite-count">793 Online</strong>
                             <i class="discord-invite-status-icon discord-invite-offline-icon"></i>
-                            <strong class="discord-invite-count">Y,YYY Members</strong>
+                            <strong class="discord-invite-count">4.810 Members</strong>
                         </div>
                     </div>
                     <a type="button" class="discord-invite-join-button" href="https://discord.gg/odessarp">
                         Join
                     </a>
                 </div>
+            </div>
+            <div class="discord-server-info">
+                <iframe src="https://discord.com/widget?id=679360230299140114&theme=dark" width="350" height="350" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
         </div>
     </main>
