fixed favicon - adjusted css for rules

--- a/sites/apply.html
+++ b/sites/apply.html
@@ -6,7 +6,7 @@
     <title>Odessa RP - Ansøg</title>
     <link rel="stylesheet" href="/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="/images/favicon.ico">
 </head>
 <body>
     <div class="header-container">
