--- a/sites/rules.html
+++ b/sites/rules.html
@@ -6,7 +6,7 @@
     <title>Odessa RP - Regler</title>
     <link rel="stylesheet" href="/styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="/images/favicon.ico">
 </head>
 <body>
     <div class="header-container">
@@ -32,7 +32,7 @@
     </div>
 
     <main class="main-content">
-        <div class="content-container">
+        <div class="content-container" id="community-guidelines">
             <h1>Server Regler</h1>
             <h2>[DISCORD & COMMUNITY GUIDELINES]</h2>
             <p><strong>C1) Serverpersonale</strong> - Det er <strong>IKKE</strong> tilladt at kontakte serverpersonale i privatbeskeder uden forudgående accept! Brug #Afventer Support eller #opret-sag på Discord. (Vi kan heller ikke lide SPAM)</p>
@@ -92,7 +92,8 @@
             <p><strong>C29) Ansøgning om PK</strong> - Ønsker du en anden spiller PK'et, skal du oprette en CK/PK ansøgning under #🗯opret-sag. Her fremlægger du en velskrevet tekst samt begrundelse for det ønskede PK. Scenariet kan først udføres når ansøgningen er godkendt.</p>
 
             <p><strong>C30) Suicide By Cop</strong> - Hvis du bevidst lader dig blive dræbt af politiet (Suicide by Cop), eller begår selvmord for at undgå en straf, vil dette medføre et CK.</p>
-            
+        </div>
+        <div class="content-container" id="roleplay-rules">
             <h2>[ROLLESPILS REGLER]</h2>
             <p><strong>§1 RDM (Random DeathMatch)</strong> - Hvis der ikke er noget RP-scenarie, som retfærdiggør, at man slår/skyder/stikker eller på anden måde laver en handling der resulterer i en anden spillers død.</p>
     
