--- a/sites/rules.html
+++ b/sites/rules.html
@@ -19,16 +19,15 @@
                     <li><a href="/index.html">Forside</a></li>
                     <li><a href="rules.html">Regler</a></li>
                     <li><a href="https://discord.gg/odessarp" target="_blank">Discord</a></li>
-                    <li><a href="apply.html">Ansøg</a></li>
                 </ul>
             </nav>
         </header>
-        <div class="hero-container">
+        <!-- <div class="hero-container">
             <div class="hero-bg"></div>
             <a class="hero" href="fivem://connect/cfx.re/join/lm8mo4">
                 <img src="/images/logo2.png" alt="Odessa RP Logo" class="hero-logo">
             </a>
-        </div>
+        </div> -->
     </div>
 
     <main class="main-content">
